include/lumen_simple.h

/*
 Opaque packed node handle. `0` means "no node".
 */
typedef uint64_t LumenNode;
/*
 Owned list of node handles returned by a query / children call. Free
 with [`lumen_nodelist_free`]; index with [`lumen_nodelist_get`].
 */
typedef struct {
    /*
     Heap pointer to `len` contiguous [`LumenNode`] handles, or null
     when `len == 0`.
     */
    LumenNode *ptr;
    /*
     Number of handles.
     */
    size_t len;
} LumenNodeList;
/*
 Post-layout box (design 4.7 `rect()` / `content_rect()`). Local `x` / `y`
 are relative to the parent; `client_*` are window coordinates.
 */
typedef struct {
    /*
     Local x.
     */
    double x;
    /*
     Local y.
     */
    double y;
    /*
     Width.
     */
    double width;
    /*
     Height.
     */
    double height;
    /*
     Window-space x.
     */
    double client_x;
    /*
     Window-space y.
     */
    double client_y;
} LumenRect;
/*
 Scroll offsets + travel limits (`scroll()`).
 */
typedef struct {
    /*
     Horizontal offset.
     */
    double x;
    /*
     Vertical offset.
     */
    double y;
    /*
     Max horizontal offset.
     */
    double max_x;
    /*
     Max vertical offset.
     */
    double max_y;
} LumenScroll;
/*
 One `(key, value)` pair in a [`LumenKVList`]. Both are owned, UTF-8,
 NUL-terminated strings freed by [`lumen_kvlist_free`].
 */
typedef struct {
    /*
     Owned key.
     */
    char *key;
    /*
     Owned value.
     */
    char *value;
} LumenKV;
/*
 Owned key-value buffer returned by the string-map introspection reads.
 Free with [`lumen_kvlist_free`].
 */
typedef struct {
    /*
     Heap pointer to `len` pairs, or null when `len == 0`.
     */
    LumenKV *ptr;
    /*
     Number of pairs.
     */
    size_t len;
} LumenKVList;
/*
 Owned string buffer returned by `classes` / `components`. Free with
 [`lumen_strlist_free`].
 */
typedef struct {
    /*
     Heap pointer to `len` owned C strings, or null when `len == 0`.
     */
    char **ptr;
    /*
     Number of strings.
     */
    size_t len;
} LumenStrList;
/*
 Pointer state snapshot (`pointer_state()`).
 */
typedef struct {
    /*
     Window-space x.
     */
    double x;
    /*
     Window-space y.
     */
    double y;
    /*
     Non-zero while the pointer is inside the window.
     */
    int inside;
    /*
     Bit 0 set while the primary button is held.
     */
    uint32_t buttons;
    /*
     Shift held.
     */
    int shift;
    /*
     Control held.
     */
    int ctrl;
    /*
     Alt held.
     */
    int alt;
    /*
     Super / Command held.
     */
    int super_;
} LumenPointerState;
/*
 Per-frame counters (`frame_info()`).
 */
typedef struct {
    /*
     Monotonic tick counter.
     */
    uint64_t frame;
    /*
     Milliseconds since the previous frame.
     */
    double dt_ms;
    /*
     Layout-dirty element count.
     */
    uint64_t dirty_count;
} LumenFrameInfo;
/*
 Off token returned by [`lumen_on`]; pass to [`lumen_off`] to unbind.
 */
typedef uint64_t LumenEventToken;
/*
 Returns the packed ABI version this library was compiled with.
 Compare against `LUMEN_API_VERSION` from `lumen.h` at startup.
 */
 uint32_t lumen_abi_version(void) ;
/*
 Release a [`LumenNodeList`] returned by a query / children call.
 Double-free / freeing a non-Lumen list is undefined; call once.

 # Safety
 `list` must come from a Lumen query / children call and not have been
 freed already.
 */
 void lumen_nodelist_free(LumenNodeList list) ;
/*
 Release a [`LumenKVList`] returned by an introspection read.
 */
 void lumen_kvlist_free(LumenKVList list) ;
/*
 Release a [`LumenStrList`] returned by `classes` / `components`.
 */
 void lumen_strlist_free(LumenStrList list) ;