include/lumen.h

/* Forward declarations needed by lumen_simple.h. The opaque LumenApp
 * handle is referenced by the generated lifecycle exports below. The
 * LumenStatus enum is defined here (rather than via cbindgen) so the
 * C identifiers LUMEN_OK / LUMEN_ERR_* keep their historical spelling. */
typedef struct LumenApp LumenApp;
/* Forward declarations - break the LumenValue <-> container cycle.
 * LumenApp is forward-declared above so lumen_simple.h sees it. */
typedef struct LumenValue    LumenValue;
typedef struct LumenMapEntry LumenMapEntry;
/* ============================================================
 * LumenStatus - return code for every lumen_* C function.
 *
 * Hand-written so the C identifiers (LUMEN_OK, LUMEN_ERR_*) match
 * historical embedder code and lumen.hpp. The Rust `#[repr(u32)]`
 * source-of-truth lives in lumen/src/lib.rs::LumenStatus.
 * Numeric values are stable; W6.12 only appended new variants.
 * ============================================================ */
typedef enum LumenStatus {
    LUMEN_OK                 = 0,
    LUMEN_ERR_BAD_PATH       = 1,
    LUMEN_ERR_BAD_ARG        = 2,
    LUMEN_ERR_RUNTIME        = 3,
    LUMEN_ERR_INTERNAL       = 4,
    LUMEN_ERR_PARSE          = 5,
    LUMEN_ERR_CSS            = 6,
    LUMEN_ERR_ASSET          = 7,
    LUMEN_ERR_WINDOW         = 8,
    LUMEN_ERR_SCRIPT         = 9,
    LUMEN_ERR_IO             = 10,
    LUMEN_ERR_INVALID_HANDLE = 11,
    LUMEN_ERR_INVALID_VALUE  = 12,
    LUMEN_ERR_PANIC          = 13,
    /* A caller-provided output buffer was too small. Where the export
     * takes an `out_len`, it is set to the required capacity (bytes
     * needed, including the trailing NUL). Added in ABI 0.3. */
    LUMEN_ERR_BUFFER_TOO_SMALL = 14,
} LumenStatus;
/* Discriminant for LumenValue. */
typedef enum LumenKind {
    LUMEN_NIL    = 0,
    LUMEN_BOOL   = 1,
    LUMEN_INT    = 2,
    LUMEN_FLOAT  = 3,
    LUMEN_STRING = 4,
    LUMEN_ARRAY  = 5,
    LUMEN_MAP    = 6,
} LumenKind;
/* Borrowed view of an array of LumenValue. */
typedef struct LumenArrayView {
    const LumenValue* items;
    size_t            len;
} LumenArrayView;
/* Borrowed view of a map of LumenMapEntry. */
typedef struct LumenMapView {
    const LumenMapEntry* entries;
    size_t               len;
} LumenMapView;
/* Payload union. Read the field matching LumenValue::kind. */
typedef union LumenValueData {
    int             boolean;     /* LUMEN_BOOL  (0 = false, !=0 = true) */
    int64_t         integer;     /* LUMEN_INT   */
    double          float_;      /* LUMEN_FLOAT */
    const char*     string;      /* LUMEN_STRING (UTF-8, NUL-terminated) */
    LumenArrayView  array;       /* LUMEN_ARRAY */
    LumenMapView    map;         /* LUMEN_MAP   */
} LumenValueData;
/* Tagged value. */
struct LumenValue {
    LumenKind       kind;
    LumenValueData  as_;
};
/* One entry in a LumenMapView. */
struct LumenMapEntry {
    const char* key;
    LumenValue  value;
};
/*
 * Signature of an exposed callback. `argv` is borrowed for the
 * duration of the call; the returned LumenValue must stay valid
 * until this function returns.
 */
typedef LumenValue (*LumenFn)(int argc,
                              const LumenValue* argv,
                              void* user_data);
/*
 * Out-parameter callback variant of LumenFn (ABI 0.3).
 *
 * Writes its result through `out` instead of returning a LumenValue by
 * value. Because LumenValue (24 bytes) exceeds the SysV x86-64 16-byte
 * register-pair return threshold, a by-value return forces every
 * non-Rust binding to hand-encode the platform's aggregate-return
 * (`sret`) convention; this variant sidesteps that entirely. `out` is
 * never NULL and points to a single writable LumenValue that Lumen has
 * zero-initialised to LUMEN_NIL - a callback returning nil may leave it
 * untouched. Any pointers the written value carries must stay valid
 * until the callback returns. Register with lumen_app_expose_v2().
 */
typedef void (*LumenFnV2)(LumenValue* out,
                          int argc,
                          const LumenValue* argv,
                          void* user_data);
/*
 * Id-scoped native click callback (ABI 0.3). Registered with
 * lumen_app_on_click(); Lumen calls it once per click on the element
 * whose id equals the registered id. `id` (UTF-8, NUL-terminated) is
 * borrowed for the call. Fires on the Lumen tick thread.
 */
typedef void (*LumenClickFn)(const char* id, void* user_data);
/*
 * Signal-change subscription callback (ABI 0.4). Registered with
 * lumen_signal_watch(); Lumen calls it once per tick in which the watched
 * global signal's committed value changed (and once on the first tick the
 * value is observed after registration). `name` (UTF-8, NUL-terminated) is
 * the watched signal name; `value` points to the new committed value,
 * borrowed for the duration of the call.
 *
 * The LumenValue mirrors the stored value: bool -> LUMEN_BOOL, int64 ->
 * LUMEN_INT, double -> LUMEN_FLOAT, string -> LUMEN_STRING, and color ->
 * LUMEN_INT packed big-endian 0xRRGGBBAA (unpack with (v>>24)&0xff ...
 * v&0xff). Other stored kinds arrive as LUMEN_NIL. Fires on the Lumen tick
 * thread; delivery is per-tick coalesced.
 */
typedef void (*LumenWatchFn)(const char* name, const LumenValue* value,
                             void* user_data);
/* ============================================================
 * App lifecycle
 * ============================================================
 *
 * lumen_app_new / lumen_app_set_title / lumen_app_set_size /
 * lumen_app_free / lumen_app_run / lumen_last_error /
 * lumen_signal_clear / lumen_abi_version are declared in
 * `lumen_simple.h`.
 */

/*
 * Expose a native callback to the app's script under `name`. `arg_count`
 * is the arity (0..=8 sensible). `user_data` is stored by value; the
 * embedder owns it and must keep it valid until `lumen_app_run`
 * returns.
 *
 * Every script host the app runs gets the registration. Rhai and Lua
 * scripts call it as a plain global; a candela script declares
 * `host "native" { any <name>(...); }` and calls `native::<name>(...)`.
 */
LumenStatus lumen_app_expose(LumenApp* app,
                             const char* name,
                             uint32_t arg_count,
                             LumenFn func,
                             void* user_data);
/*
 * Out-parameter callback registration (ABI 0.3). Identical to
 * lumen_app_expose() except `func` is a LumenFnV2 that writes its result
 * through an out-pointer instead of returning a LumenValue by value.
 * Prefer this for ctypes / libffi-only bindings that cannot easily
 * express an aggregate (`sret`) return. lumen_app_expose() (v1) is
 * retained for source compatibility.
 */
LumenStatus lumen_app_expose_v2(LumenApp* app,
                                const char* name,
                                uint32_t arg_count,
                                LumenFnV2 func,
                                void* user_data);
/*
 * Register an id-scoped native click handler (ABI 0.3). `cb` fires once
 * per click on the element whose id equals `id`, routed by the runtime;
 * no main.lmn forwarding boilerplate, no per-embedder dispatch table
 * over the global on_click(id) hook. A second registration for the same
 * id REPLACES the first. Call before lumen_app_run(); coexists with any
 * script-side on_click(id). Native routing does not fire under
 * lumen_app_run_headless() (no input is injected there).
 */
LumenStatus lumen_app_on_click(LumenApp* app,
                               const char* id,
                               LumenClickFn cb,
                               void* user_data);
/*
 * Scalar snapshot of a dynamic DOM event (ABI 0.10), passed by pointer to a
 * LumenEventFn. The string fields (type / key / value) are read separately via
 * lumen_event_type / _key / _value. Hand-written here: the struct is only
 * reachable through the hand-written lumen_on, so cbindgen does not emit it.
 * `#[repr(C)]` on the Rust side; keep the field order and types in lockstep.
 */
typedef struct LumenEvent {
    LumenNode target;         /* packed node handle */
    LumenNode current_target; /* packed node handle of the running listener */
    double local_x;           /* pointer x relative to the target */
    double local_y;
    double client_x;          /* pointer x in window coordinates */
    double client_y;
    double delta_x;           /* wheel delta */
    double delta_y;
    int64_t button;           /* 0 primary, 1 middle, 2 secondary, -1 none */
    uint8_t shift;            /* modifier flags, 0 / 1 */
    uint8_t ctrl;
    uint8_t alt;
    uint8_t super_;
} LumenEvent;
/*
 * Dynamic DOM event callback (ABI 0.10). Fires when a bound event reaches
 * `node` during capture -> target -> bubble propagation. `event` is borrowed
 * for the call; copy anything retained. Read the string fields with
 * lumen_event_type / _key / _value and control propagation with
 * lumen_event_prevent_default / _stop_propagation /
 * _stop_immediate_propagation (declared in lumen_simple.h). `user_data` is the
 * pointer passed to lumen_on. Hand-written here: cbindgen renders the
 * Option<extern fn> parameter of lumen_on as an unusable struct.
 */
typedef void (*LumenEventFn)(const LumenEvent* event, void* user_data);