sdk/python/lumen/_ffi.py

"""ctypes bindings for the Lumen C ABI.

Stdlib-only - no ``cffi``, no build step. This module is the thin,
unopinionated layer: it finds ``liblumen``, declares every exported
function's ``argtypes``/``restype``, mirrors the C structs byte-for-byte,
and converts between :class:`LumenValue` and plain Python values.

Everything Pythonic (the ``App`` class, decorators, typed signal
get/set) lives in :mod:`lumen.api`. Import this module directly only if
you need the raw C surface.

Source of truth for the layout below: ``src/lib.rs`` and the
generated header pair ``include/{lumen.h,lumen_simple.h}``.
Read those before changing a ``_fields_`` list - a mismatched struct
layout is silent memory corruption, not a Python exception.
"""

from __future__ import annotations

import ctypes
import ctypes.util
import os
import shutil
import sys
from pathlib import Path

from .errors import LumenAbiVersionError, LumenLibraryNotFoundError

__all__ = [
    "load_library",
    "LumenKind",
    "LumenStatus",
    "LumenValue",
    "LumenValueData",
    "LumenArrayView",
    "LumenMapView",
    "LumenMapEntry",
    "make_callback",
    "make_click_callback",
    "make_watch_callback",
    "make_event_callback",
    "LumenNodeList",
    "LumenRect",
    "LumenScroll",
    "LumenKV",
    "LumenKVList",
    "LumenStrList",
    "LumenPointerState",
    "LumenFrameInfo",
    "LumenEvent",
    "to_lumen_value",
    "from_lumen_value",
    "ABI_MAJOR",
    "ABI_MINOR",
    "ABI_PATCH",
]

# ============================================================
# ABI version this SDK was written against.
#
# Mirrors LUMEN_ABI_{MAJOR,MINOR,PATCH} in src/lib.rs at the
# time this SDK was written. `load_library()` compares this against
# the *loaded* library's `lumen_abi_version()` at import time.
# ============================================================

ABI_MAJOR = 0
ABI_MINOR = 13
ABI_PATCH = 0


def _packed(major: int, minor: int, patch: int) -> int:
    return (major << 16) | (minor << 8) | patch


EXPECTED_ABI_VERSION = _packed(ABI_MAJOR, ABI_MINOR, ABI_PATCH)


# ============================================================
# LumenKind / LumenStatus - mirror the Rust #[repr(u32)] enums.
# ============================================================


class LumenKind:
    """Discriminant for :class:`LumenValue`. Not a ``ctypes`` type
    itself - ``LumenValue.kind`` is a plain ``c_uint32``; use these as
    the comparison constants."""

    NIL = 0
    BOOL = 1
    INT = 2
    FLOAT = 3
    STRING = 4
    ARRAY = 5
    MAP = 6


class LumenStatus:
    """Numeric ``LumenStatus`` codes. See :mod:`lumen.errors` for the
    exception each one maps to."""

    OK = 0
    ERR_BAD_PATH = 1
    ERR_BAD_ARG = 2
    ERR_RUNTIME = 3
    ERR_INTERNAL = 4
    ERR_PARSE = 5
    ERR_CSS = 6
    ERR_ASSET = 7
    ERR_WINDOW = 8
    ERR_SCRIPT = 9
    ERR_IO = 10
    ERR_INVALID_HANDLE = 11
    ERR_INVALID_VALUE = 12
    ERR_PANIC = 13
    ERR_BUFFER_TOO_SMALL = 14


# ============================================================
# LumenValue tree - must match the #[repr(C)] layout in lib.rs exactly:
#
#   #[repr(u32)] enum LumenKind { Nil=0, Bool, Int, Float, String, Array, Map }
#
#   #[repr(C)] struct LumenArrayView { items: *const LumenValue, len: usize }
#   #[repr(C)] struct LumenMapView   { entries: *const LumenMapEntry, len: usize }
#
#   #[repr(C)] union LumenValueData {
#       boolean: c_int, integer: i64, float_: f64, string: *const c_char,
#       array: LumenArrayView, map: LumenMapView,
#   }
#
#   #[repr(C)] struct LumenValue { kind: LumenKind, as_: LumenValueData }
#   #[repr(C)] struct LumenMapEntry { key: *const c_char, value: LumenValue }
#
# ctypes lays out Structure/Union fields using the platform C ABI rules
# (same as the Rust compiler's repr(C)), so declaring the fields in the
# same order reproduces the same padding automatically - no manual
# alignment arithmetic needed.
# ============================================================


class LumenValue(ctypes.Structure):
    pass


class LumenArrayView(ctypes.Structure):
    _fields_ = [
        ("items", ctypes.POINTER(LumenValue)),
        ("len", ctypes.c_size_t),
    ]


class LumenMapEntry(ctypes.Structure):
    pass


class LumenMapView(ctypes.Structure):
    _fields_ = [
        ("entries", ctypes.POINTER(LumenMapEntry)),
        ("len", ctypes.c_size_t),
    ]


class LumenValueData(ctypes.Union):
    _fields_ = [
        ("boolean", ctypes.c_int),
        ("integer", ctypes.c_int64),
        ("float_", ctypes.c_double),
        ("string", ctypes.c_char_p),
        ("array", LumenArrayView),
        ("map", LumenMapView),
    ]


LumenValue._fields_ = [
    ("kind", ctypes.c_uint32),
    ("as_", LumenValueData),
]

LumenMapEntry._fields_ = [
    ("key", ctypes.c_char_p),
    ("value", LumenValue),
]

# ============================================================
# Dynamic DOM structs (ABI 0.8 read side, 0.11 introspection, 0.12
# inner_markup). Mirror the #[repr(C)] layouts in lib.rs / the generated
# lumen_simple.h. `LumenNode` and `LumenEventToken` are bare uint64
# typedefs (use ctypes.c_uint64 directly); the rest are Structures.
# ============================================================


class LumenNodeList(ctypes.Structure):
    """Owned list of node handles from a query / children call. Free with
    ``lumen_nodelist_free``."""

    _fields_ = [
        ("ptr", ctypes.POINTER(ctypes.c_uint64)),
        ("len", ctypes.c_size_t),
    ]


class LumenRect(ctypes.Structure):
    """Post-layout box (``rect`` / ``content_rect``). Local ``x`` / ``y``
    relative to the parent; ``client_*`` in window coordinates."""

    _fields_ = [
        ("x", ctypes.c_double),
        ("y", ctypes.c_double),
        ("width", ctypes.c_double),
        ("height", ctypes.c_double),
        ("client_x", ctypes.c_double),
        ("client_y", ctypes.c_double),
    ]


class LumenScroll(ctypes.Structure):
    """Scroll offsets + travel limits (``scroll``)."""

    _fields_ = [
        ("x", ctypes.c_double),
        ("y", ctypes.c_double),
        ("max_x", ctypes.c_double),
        ("max_y", ctypes.c_double),
    ]


class LumenKV(ctypes.Structure):
    """One owned ``(key, value)`` pair in a :class:`LumenKVList`."""

    _fields_ = [
        ("key", ctypes.c_char_p),
        ("value", ctypes.c_char_p),
    ]


class LumenKVList(ctypes.Structure):
    """Owned key-value buffer from a string-map introspection read. Free
    with ``lumen_kvlist_free``."""

    _fields_ = [
        ("ptr", ctypes.POINTER(LumenKV)),
        ("len", ctypes.c_size_t),
    ]


class LumenStrList(ctypes.Structure):
    """Owned string buffer from ``classes`` / ``components``. Free with
    ``lumen_strlist_free``."""

    _fields_ = [
        ("ptr", ctypes.POINTER(ctypes.c_char_p)),
        ("len", ctypes.c_size_t),
    ]


class LumenPointerState(ctypes.Structure):
    """Pointer state snapshot (``pointer_state``)."""

    _fields_ = [
        ("x", ctypes.c_double),
        ("y", ctypes.c_double),
        ("inside", ctypes.c_int),
        ("buttons", ctypes.c_uint32),
        ("shift", ctypes.c_int),
        ("ctrl", ctypes.c_int),
        ("alt", ctypes.c_int),
        ("super_", ctypes.c_int),
    ]


class LumenFrameInfo(ctypes.Structure):
    """Per-frame counters (``frame_info``)."""

    _fields_ = [
        ("frame", ctypes.c_uint64),
        ("dt_ms", ctypes.c_double),
        ("dirty_count", ctypes.c_uint64),
    ]


class LumenEvent(ctypes.Structure):
    """Scalar snapshot of a dynamic DOM event (ABI 0.10). String fields
    (type / key / value) are read separately via the current-event
    getters. Field order mirrors ``LumenEvent`` in lumen.h."""

    _fields_ = [
        ("target", ctypes.c_uint64),
        ("current_target", ctypes.c_uint64),
        ("local_x", ctypes.c_double),
        ("local_y", ctypes.c_double),
        ("client_x", ctypes.c_double),
        ("client_y", ctypes.c_double),
        ("delta_x", ctypes.c_double),
        ("delta_y", ctypes.c_double),
        ("button", ctypes.c_int64),
        ("shift", ctypes.c_uint8),
        ("ctrl", ctypes.c_uint8),
        ("alt", ctypes.c_uint8),
        ("super_", ctypes.c_uint8),
    ]


# Dynamic DOM event callback (ABI 0.10):
#   type LumenEventFn = extern "C" fn(event: *const LumenEvent,
#                                     user_data: *mut c_void);
# `event` is borrowed for the call. `dom.Node.on` wraps a Python handler
# through make_event_callback below.
_LumenEventFnRaw = ctypes.CFUNCTYPE(None, ctypes.POINTER(LumenEvent), ctypes.c_void_p)

# Signature of an exposed callback. As of ABI 0.3 the SDK targets the
# out-parameter variant, ``LumenFnV2``:
#
#   type LumenFnV2 = unsafe extern "C" fn(out: *mut LumenValue, argc: c_int,
#       argv: *const LumenValue, user_data: *mut c_void);   // no return value
#
# The callback writes its result through ``out`` instead of returning a
# ``LumenValue`` by value. This is a *first-class, documented* ABI
# signature, not a workaround: it exists precisely so ctypes / libffi
# bindings don't have to hand-encode a platform's aggregate-return
# (``sret``) convention.
#
# This matters because ctypes cannot build a callback whose ``restype``
# is a Structure/Union at all (``TypeError: invalid result type for
# callback function``), and ``LumenValue`` is 24 bytes -- past the SysV
# x86-64 16-byte register-pair threshold -- so the by-value ``LumenFn``
# (v1) return has to travel through a hidden ABI-implicit sret pointer
# that we'd otherwise have to reconstruct per target. ``LumenFnV2``'s
# explicit leading ``out`` pointer *is* that pointer, made part of the
# contract, so ``restype=None`` here is exactly right on every platform
# rather than only on x86_64 Linux by luck. We register through
# ``lumen_app_expose_v2`` accordingly. The v1 ``lumen_app_expose`` +
# by-value ``LumenFn`` path is intentionally not used by this SDK.
_LumenFnV2Raw = ctypes.CFUNCTYPE(
    None,
    ctypes.POINTER(LumenValue),  # out: caller-allocated result slot (ABI-explicit)
    ctypes.c_int,
    ctypes.POINTER(LumenValue),
    ctypes.c_void_p,
)

# Backwards-compatible alias: older code / tests referred to the raw
# callback factory as ``_LumenFnRaw``. Same shape (the v1 sret hack and
# the v2 out-param have identical ctypes signatures), now the v2 ABI.
_LumenFnRaw = _LumenFnV2Raw

# Id-scoped native click callback (ABI 0.3):
#   type LumenClickFn = unsafe extern "C" fn(id: *const c_char,
#                                            user_data: *mut c_void);
_LumenClickFnRaw = ctypes.CFUNCTYPE(None, ctypes.c_char_p, ctypes.c_void_p)

# Signal-change subscription callback (ABI 0.4):
#   type LumenWatchFn = unsafe extern "C" fn(name: *const c_char,
#       value: *const LumenValue, user_data: *mut c_void);
# `value` is borrowed for the call; we deep-copy it into a plain Python
# value before invoking the user handler.
_LumenWatchFnRaw = ctypes.CFUNCTYPE(
    None, ctypes.c_char_p, ctypes.POINTER(LumenValue), ctypes.c_void_p
)


def make_callback(func):
    """Wrap ``func(argc: int, argv: POINTER(LumenValue), user_data: int) ->
    LumenValue`` into the actual ctypes callback object passed to
    ``lumen_app_expose_v2`` (the out-parameter ABI variant). Keep the
    return value referenced by the caller (e.g. in ``App._callbacks``)
    for as long as the callback might still be invoked -- see the module
    docstring.
    """

    def raw(out, argc, argv, user_data):
        result = func(argc, argv, user_data)
        out[0] = result

    return _LumenFnV2Raw(raw)


def make_click_callback(func):
    """Wrap ``func(id: str)`` into a ctypes ``LumenClickFn`` callback for
    ``lumen_app_on_click``. Keep the return value referenced for as long
    as the app can still deliver clicks.
    """

    def raw(id_ptr, _user_data):
        id_str = id_ptr.decode("utf-8", errors="replace") if id_ptr else ""
        func(id_str)

    return _LumenClickFnRaw(raw)

